refactor: style and icon and no home page anymore

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@heroicons/react": "^2.2.0",
     "@monaco-editor/react": "^4.7.0",
     "@supabase/supabase-js": "^2.58.0",
     "monaco-editor": "^0.53.0",
